# harness-ml

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  mcp-servers.json  plugin.json
.claude-plugin/skills/harness-explore-space/: SKILL.md
.github/workflows/: deploy-docs.yml  loc.yml  publish.yml  tests.yml
docs/: README-mm-women-setup.md  _config.yml  easyml-capabilities.md  easyml-configs-that-dont-work.md  easyml-gaps-vs-mm.md  for-agents.md  for-humans.md  index.md  mm-women-config-mapping.md  troubleshooting.md
docs/_includes/: custom-head.html  footer.html  head.html  header.html
docs/_layouts/: plain.html  post.html  showcase.html
docs/_posts/: 2026-03-08-why-i-built-harness-ml.md
docs/assets/: custom.css
docs/examples/: binary-classification.md  feature-engineering.md  temporal-cv.md
docs/plans/: 2026-02-28-ai-ml-framework-design.md  2026-02-28-easyml-implementation-plan.md  2026-02-28-yaml-driven-interface.md  2026-03-01-data-layer-improvements-design.md  2026-03-01-data-layer-improvements.md  2026-03-01-declarative-features-design.md  2026-03-01-declarative-features.md  2026-03-01-easyml-plugin-design.md  2026-03-01-exploration-engine-design.md  2026-03-01-gap-closure.md  2026-03-03-v2-refactor-design.md  2026-03-03-v2-refactor-plan.md  2026-03-05-port-main-to-v2.md  2026-03-06-competition-engine-design.md  2026-03-06-competition-engine-plan.md  2026-03-06-notebook-export-design.md  2026-03-06-notebook-export-impl.md  2026-03-07-multiclass-support.md  2026-03-09-notebook-ui-design.md  2026-03-09-notebook-ui.md  2026-03-09-project-notebook.md
docs/skills/: harness-domain-research.md  harness-explore-space.md  harness-run-experiment.md
docs/superpowers/plans/: 2026-03-14-migrate-to-protomcp.md
examples/ames-housing/: CLAUDE.md  EXPERIMENT_LOG.md
examples/ames-housing/config/: models.yaml  pipeline.yaml  server.yaml
examples/ames-housing/data/: source_registry.json
examples/mlb-home-win/: CLAUDE.md  EXPERIMENT_LOG.md
examples/mlb-home-win/config/: ensemble.yaml  models.yaml  pipeline.yaml  server.yaml  sources.yaml
examples/mlb-home-win/data/: source_registry.json
examples/titanic/: CLAUDE.md  EXPERIMENT_LOG.md  README.md
examples/titanic/config/: models.yaml  pipeline.yaml  server.yaml
examples/titanic/data/: source_registry.json
examples/wine-quality/: CLAUDE.md  EXPERIMENT_LOG.md
examples/wine-quality/config/: models.yaml  pipeline.yaml  server.yaml
examples/wine-quality/data/: source_registry.json
skills/diagnosis/: SKILL.md
skills/feature-engineering/: SKILL.md
skills/harness-run-experiment/: SKILL.md
skills/mindset/: SKILL.md
skills/run-experiment/: SKILL.md
skills/synthesis/: SKILL.md
tests/: test_e2e_mcp.py  test_integration.py
(+22 files in other folders)
