[project]
name = "easyml"
version = "0.1.0"
description = "AI-driven ML framework with guardrails"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/easyml-core",
    "packages/easyml-plugin",
    "packages/easyml-sports",
]

[tool.pytest.ini_options]
testpaths = ["packages/easyml-core/tests", "tests"]
addopts = "--import-mode=importlib"

[project.optional-dependencies]
all = [
    "easyml-core[all]",
    "easyml-plugin",
    "easyml-sports",
]

[tool.uv.sources]
easyml-core = { workspace = true }
easyml-plugin = { workspace = true }
easyml-sports = { workspace = true }

[dependency-groups]
dev = [
    "easyml-core[all]",
    "easyml-plugin",
    "easyml-sports",
    "catboost>=1.2.10",
    "click>=8.0",
    "lightgbm>=4.6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytorch-tabnet>=4.1.0",
    "torch>=2.10.0",
    "xgboost>=3.2.0",
]
